--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@ STYLING FOR GAME BOARD
 @media screen and (max-width: 414px) {
 	.container {
 		width: 100%;
-		margin: 0;
+		margin: 2% auto 0;
+		padding-right: 1%;
+		padding-left: 1%;
 	}
 }
 
@@ -67,7 +69,7 @@ STYLING FOR GAME BOARD
 
 .gamesquare {
 	display: block;
-	margin-right: 15px;
+	*margin-right: 15px;
 	float: left;
 	border-radius: 3px;
 }
