--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ STYLING FOR GAME BOARD
 @media screen and (max-width: 414px) {
 	.container {
 		width: 100%;
-		margin: 0;
+		margin: 2% auto 0;
+		padding: 2% 1% 0;
 	}
 }
 
