--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@ STYLING FOR AREA ABOVE GAME BOARD
 .scoresContainer {
 	float: right;
 	text-align: center;
+	margin-top: -50px;
 }
 @media screen and (max-width: 414px) {
 	.scoresContainer {
 		margin-top: 4%;
-		text-align: center;
 	}
 }
 
